# tvdb

./: .gitignore  docker-compose.yml
data/: .gitignore  explore.R  read.R  sample.txt
plots/: .Rhistory  read.R
scripts/: embed.py
tvdb/: Cargo.toml
tvdb/migrations/2024-02-07-003250_create_titles/: down.sql  up.sql
tvdb/migrations/2024-02-08-163832_add_vector/: down.sql
tvdb/migrations/2024-02-08-164028_add_embedding_table/: down.sql  up.sql
tvdb/src/: main.rs  message.rs  read.rs  schema.rs  write.rs
tvdb/src/imdb/: mod.rs  parse.rs  title_basics.rs
