[package]
name = "tvdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
crossbeam = "0.8.4"
diesel = { version = "2.1.4", features = ["postgres"] }
dotenvy = "0.15.7"
flate2 = "1.0.28"
indicatif = "0.17.7"
serde = { version = "1.0.196", features = ["derive"] }
